@@ -104,7 +104,6 @@
     X(QHEAT,      MANUFACTURER_QDS, 0x04,  0x23) \
     X(QSMOKE,     MANUFACTURER_QDS, 0x1a,  0x21) \
     X(QSMOKE,     MANUFACTURER_QDS, 0x1a,  0x23) \
-    X(SHARKY774,  MANUFACTURER_DME, 0x04,  0x41) \
     X(SONTEX868,  MANUFACTURER_SON, 0x08,  0x16) \
     X(TOPASESKR,  MANUFACTURER_AMT, 0x06,  0xf1) \
     X(TOPASESKR,  MANUFACTURER_AMT, 0x07,  0xf1) \
